# succinct_message_with_sp1

back/program/: Cargo.toml
back/program/src/: main.rs
back/script/: Cargo.toml
front/: index.html  script.js  style.css
