[package]
version = "0.1.0"
name = "succinct-script"
edition = "2021"
default-run = "succinct"

[[bin]]
name = "succinct"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fibonacci-lib = { path = "../lib" }
dotenv = "0.15.0"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
hyper = "0.14"
[build-dependencies]
sp1-build = "4.0.0"
